# deep_bayesopt

./: .gitignore  README.md  poetry.toml  pyproject.toml
.github/workflows/: quality-checks.yaml
experiment/: __init__.py  acquisition.py  experiment.py  metrics.py  models.py
experiment/trieste/: __init__.py  builders.py  models.py  sampler.py
notebooks/: tmp_test_fsbnn.py
tests/: conftest.py
tests/experiment/trieste/: test_bayesian_optimization.py  test_builders.py  test_models.py  test_samplers.py
tests/integration/: test_predictions.py
tests/trieste/: test_bayesian_optimization.py  test_builders.py  test_models.py  test_samplers.py
tests/uanets/models/: test_dropout.py  test_mc_dropout.py
tests/unflow/models/: test_dropout.py
tests/util/: functions.py  misc.py  models.py  trieste.py
trieste/: builders.py  models.py  sampler.py
uanets/: types.py
uanets/benchmarks/: __init__.py  dataset.py  interface.py  synthetic.py
uanets/models/: __init__.py  dropout.py  function_space_bnn.py  interface.py  layers.py  mc_dropout.py
unflow/models/: __init__.py  dropout.py  evidential.py  interface.py
