# Copyright 2022 The deep_bayesopt Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "deep_bayesopt"
version = "0.1.0"
description = ""
authors = ["Hrvoje Stojic <hrvoje.stojic@protonmail.com>"]
readme = "README.md"
packages = [{include = "uanets"}]

[tool.pytest.ini_options]
testpaths = [
    "experiments",
    "uanets",
    "tests/unit",
    "tests/integration",
]

[tool.poetry.dependencies]
python = "~3.7"
trieste = "^0.13.3"
tensorflow = "~2.8.0"
tensorflow-probability = "~0.13.0"
gpflux = "^0.3.1"
gpflow = "^2.6.3"
ray = "^2.2.0"
Hydra = "^2.5"
check-shapes = "^1.0.0"


[tool.poetry.dev-dependencies]
flake8 = "^5.0.0"
jupytext = "^1.14.4"
mypy = "^0.991"
isort = "^5.11.4"
black = "^22.12.0"
pytest = "^7.2.0"
taskipy = "^1.10.3"
pytest-black = "^0.3.12"
pytest-cov = "^4.0.0"
pytest-flake8 = "^1.1.1"
pytest-isort = "^3.1.0"
pytest-mypy = "^0.10.3"

[tool.taskipy.tasks]
tests = "pytest --mypy --durations 6"
quicktests = "pytest -x --ff -rN -Wignore --ignore-glob=tests/integration/*"
mypy = "mypy"
check_format = "pytest -v --black --flake8 --isort -m 'black or flake8 or isort'"
format = "black . && flake8 . && isort . && black -l 80 notebooks/*pct.py"

[tool.mypy]
files = "experiments,trieste,scripts,uanets,tests"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
show_error_codes = true

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.py$'
extend-exclude = '\.pct.py$'

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = "notebooks"
line_length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
